@@ -80,6 +80,7 @@ Bugs fixed
 * #3009: Bad rendering of parsed-literals in LaTeX since Sphinx 1.4.4
 * #3000: ``option`` directive generates invalid HTML anchors
 * #2984: Invalid HTML has been generated if `html_split_index` enabled
+* #2986: themes/basic/defindex.html should be changed for html5 friendly
 * #2987: Invalid HTML has been generated if multiple IDs are assigned to a list
 * #2891: HTML search does not provide all the results
 * #1986: Title in PDF Output
